# kicker-slack-bot

./: LICENSE  README.md  kicker-slack-bot.cabal
src/: Main.hs
