name:                kicker-slack-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ksaveljev/kicker-slack-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Saveljev
maintainer:          konstantin.saveljev@gmail.com
copyright:           2017 Konstantin Saveljev
category:            Slack Bot
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kicker-slack-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ksaveljev/kicker-slack-bot
